--- a/style/horizontal.css
+++ b/style/horizontal.css
@@ -8,7 +8,7 @@
 
 /* Frame */
 .frame {
-	height: calc(100vh - 63px);
+	height: calc(100vh - 52px);
 	overflow: hidden;
 }
 .frame ul {
@@ -32,26 +32,6 @@
 	background: #a03232;
 }
 
-/* Scrollbar */
-.scrollbar {
-	margin: 0;
-	height: 10px;
-	background: #5b5959;
-	line-height: 0;
-}
-.scrollbar .handle {
-	width: 100px;
-	height: 100%;
-	background: #FF6B00;
-	cursor: pointer;
-}
-.scrollbar .handle .mousearea {
-	position: absolute;
-	top: -9px;
-	left: 0;
-	width: 100%;
-	height: 20px;
-}
 
 /* Pages */
 .pages {
